# barr

./: .gitignore  Cargo.toml  dwm-bar
src/: alsa.rs  battery.rs  brightness.rs  cpu.rs  date.rs  lib.rs  main.rs  memory.rs  mpd.rs  network.rs  wifi.rs
