[package]
name = "barr"
version = "0.1.0"
authors = ["tiso"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.11"
battery = "0.7.5"
bytesize = "1.0.0"
smol = "0.1.4"
futures = "0.3.5"
piper = "0.1.1"
async-std = {"version"="1.5.0", "features"=["unstable", "attributes"]}
sysinfo = "0.14.1"
psutil = "3.1.0"
alsa = "0.4.2"
